projet_gl/src/test/deca/syntax/invalid/listDeclVar/incorrectBooleanLiteral.deca
// Description:
//    invalid test parser for boolean expression.
//
// Resultats:
//    ligne 11 : missing IDENT at '='
//
// Historique:
//    cree le 12/01/2024

{
    bool test, = true;
}